--- a/structuring_information.html
+++ b/structuring_information.html
@@ -7,6 +7,45 @@
 </head>
 
 <body>
+
+     <h1>This is the Main Heading
+This text might be an introduction to the rest of the page. And if the page is a long one it might be split up into several sub-headings.</h1>
+
+<hr>
+
+<h2>This is a Sub-Heading
+Many long articles have sub-headings so to help you follow the structure of what is being written. There may even be sub-sub-headings (or lower-level headings)<hr>
+
+What should this be?</h2>
+
+<h3>Another Sub-Heading
+Here you can see another sub-heading. But should this be a heading? Probably not. Too much info/text now.
+right?</h3>
+
+<hr>
+<hr>
+<hr>
+
+<h4>And Another Sub-Heading
+More headings?? Here you can see another sub-heading. You know what to do now. Let's use a proper tag.</h4>
+
+<h5>Yet Another Sub-Heading
+That's a lot of headings. Here you can see another sub-heading. You know what to do now.  Make this WORD strong aka bold. Give it a proper tag!</h5>
+
+<hr>
+
+<p>Today is the 4<sup>th</sup> of July and there is a lot of C0<sup>2</sup> in the air.</p>
+
+<abbr>In case you were wondering, here is Prof John Doe's address!</abbr>
+
+<p>John Doe</p>
+
+<p>14000 Fruitvale Ave</p>
+
+<p>Saratoga, CA 95070</p>
+
 </body>
 
 </html>
+
+C:\Users\bonef\Documents\The Me Folder\West Valley\structuringinformation
