properly formatted information

--- a/structuring_information.html
+++ b/structuring_information.html
@@ -18,31 +18,33 @@ Many long articles have sub-headings so to help you follow the structure of what
 
 What should this be?</h2>
 
-<h3>Another Sub-Heading
+<p>Another Sub-Heading
 Here you can see another sub-heading. But should this be a heading? Probably not. Too much info/text now.
-right?</h3>
+right?</p>
 
-<hr>
-<hr>
-<hr>
+<br>
+<br>
+<br>
 
-<h4>And Another Sub-Heading
-More headings?? Here you can see another sub-heading. You know what to do now. Let's use a proper tag.</h4>
+<p>And Another Sub-Heading
+More headings?? Here you can see another sub-heading. You know what to do now. Let's use a proper tag.</p>
 
-<h5>Yet Another Sub-Heading
-That's a lot of headings. Here you can see another sub-heading. You know what to do now.  Make this WORD strong aka bold. Give it a proper tag!</h5>
+<h2>Yet Another Sub-Heading
+That's a lot of headings. Here you can see another sub-heading. You know what to do now.  Make this <b>WORD</b> strong aka bold. Give it a proper tag!</h2>
 
 <hr>
 
 <p>Today is the 4<sup>th</sup> of July and there is a lot of C0<sup>2</sup> in the air.</p>
 
-<abbr>In case you were wondering, here is Prof John Doe's address!</abbr>
+<p>In case you were wondering, here is <abbr title="Professor">Prof</abbr> John Doe's address!</p>
 
+<address>
 <p>John Doe</p>
 
 <p>14000 Fruitvale Ave</p>
 
 <p>Saratoga, CA 95070</p>
+</address>
 
 </body>
 
