--- a/structuring_information.html
+++ b/structuring_information.html
@@ -8,29 +8,29 @@
 
 <body>
 
-     <h1>This is the Main Heading
-This text might be an introduction to the rest of the page. And if the page is a long one it might be split up into several sub-headings.</h1>
+     <h1>This is the Main Heading</h1>
+<h1>This text might be an introduction to the rest of the page. And if the page is a long one it might be split up into several sub-headings.</h1>
 
 <hr>
 
-<h2>This is a Sub-Heading
-Many long articles have sub-headings so to help you follow the structure of what is being written. There may even be sub-sub-headings (or lower-level headings)<hr>
+<h2>This is a Sub-Heading</h2>
+<h2>Many long articles have sub-headings so to help you follow the structure of what is being written. There may even be sub-sub-headings (or lower-level headings)<hr>
 
 What should this be?</h2>
 
-<p>Another Sub-Heading
-Here you can see another sub-heading. But should this be a heading? Probably not. Too much info/text now.
+<p>Another Sub-Heading</p>
+<p>Here you can see another sub-heading. But should this be a heading? Probably not. Too much info/text now.
 right?</p>
 
 <br>
 <br>
 <br>
 
-<p>And Another Sub-Heading
-More headings?? Here you can see another sub-heading. You know what to do now. Let's use a proper tag.</p>
+<p>And Another Sub-Heading</p>
+<p>More headings?? Here you can see another sub-heading. You know what to do now. Let's use a proper tag.</p>
 
-<h2>Yet Another Sub-Heading
-That's a lot of headings. Here you can see another sub-heading. You know what to do now.  Make this <b>WORD</b> strong aka bold. Give it a proper tag!</h2>
+<p>Yet Another Sub-Heading</p>
+<p>That's a lot of headings. Here you can see another sub-heading. You know what to do now.  Make this <b>WORD</b> strong aka bold. Give it a proper tag!</p>
 
 <hr>
 
@@ -49,5 +49,3 @@ That's a lot of headings. Here you can see another sub-heading. You know what to
 </body>
 
 </html>
-
-C:\Users\bonef\Documents\The Me Folder\West Valley\structuringinformation
